--- a/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
+++ b/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
@@ -28,11 +28,11 @@
         <form>
           <div class="form-group">
             <label for="exampleFormControlInput1">Correo</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="arkus@example.com">
+            <input type="email" class="form-control" id="correo1" placeholder="arkus@example.com" required>
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Contraseña</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
+            <input type="password" class="form-control" id="contraseña1" placeholder="Contraseña" required>
           </div>
           <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
         </form>
@@ -43,20 +43,20 @@
         <form>
           <div class="form-group">
             <label for="InputName">Nombre</label>
-            <input type="text" class="form-control" id="InputName" placeholder="Nombre">
+            <input type="text" class="form-control" id="nombre" placeholder="Nombre" required>
           </div>
           <div class="form-group">
             <label for="InputUsername">Apellido</label>
-            <input type="text" class="form-control" id="InputUsername" placeholder="Apellido">
+            <input type="text" class="form-control" id="apellido" placeholder="Apellido" required>
           </div>
       
           <div class="form-group">
             <label for="InputFecha">Fecha de Nacimiento</label><br>
-            <input type="text" id="dia" placeholder="DD"/>
+            <input type="text" id="dia" placeholder="DD" required/>
                
-            <input type="text" id="mes" placeholder="MM"/>
+            <input type="text" id="mes" placeholder="MM" required/>
         
-            <input type="text" id="año" placeholder="AAAA"/>
+            <input type="text" id="año" placeholder="AAAA" required/>
           </div>
 
           <div class="form-group">
@@ -70,30 +70,21 @@
       
           <div class="form-group">
             <label for="exampleFormControlInput2">Correo</label>
-            <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="arkus@example.com">
+            <input type="email" class="form-control" id="correo2" placeholder="arkus@example.com" required>
           </div>
           <div class="form-group">
             <label for="exampleInputPassword2">Contraseña</label>
-            <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Contraseña">
+            <input type="password"  class="form-control" id="contraseña2" placeholder="Contraseña" required>
           </div>
           <div class="form-group">
             <label for="exampleInputPasswordVer">Confirmar Contraseña</label>
-            <input type="password" class="form-control" id="exampleInputPasswordVer" placeholder="Contraseña">
+            <input type="password" class="form-control" id="contraseñaVer" placeholder="Contraseña" required>
           </div>
           <button type="submit" class="btn btn-primary">Registrar</button>
         </form>
       </div>
-
-
-
   </div>
-
-
-
 </div>
 
-  <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-  <script src='https://cdn.jsdelivr.net/sweetalert2/5.3.5/sweetalert2.js'></script><script  src="./inicio-sesion.component.js"></script>
 </body>
 </html>
