--- a/desayunos-arkus/src/app/components/perfil/perfil.component.scss
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.scss
@@ -96,3 +96,15 @@ display: flex;
 align-items: center;
 flex-direction: column; 
 }
+
+.hamburger {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  cursor: pointer;
+}
+.hamburger i {
+  font-size: 25px;
+  color: black;
+}
+
