--- a/desayunos-arkus/src/app/components/perfil/perfil.component.scss
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.scss
@@ -103,8 +103,9 @@ flex-direction: column;
   top: 20px;
   cursor: pointer;
 }
-.hamburger i {
-  font-size: 25px;
-  color: black;
+.offcanvas-end {
+
+width: 500px;
+
 }
 
