--- a/desayunos-arkus/src/styles.scss
+++ b/desayunos-arkus/src/styles.scss
@@ -1,1 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
+@import './app/evo-calendar.min.css';
+@import './app/evo-calendar.midnight-blue.min.css';
