--- a/desayunos-arkus/src/app/app.component.scss
+++ b/desayunos-arkus/src/app/app.component.scss
@@ -11,7 +11,8 @@
     background: linear-gradient(45deg,#6ac1c5,#bda5ff);
 }
 #calendar{
-    width: 80%;
+    width: 90%;
+    height: 90%;
     position: absolute;
     top: 50%;
     left: 50%;
