--- a/desayunos-arkus/src/app/app.component.scss
+++ b/desayunos-arkus/src/app/app.component.scss
@@ -14,6 +14,7 @@
     width: 90%;
     height: 90%;
     position: absolute;
+    border-radius: .5%;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
