--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <button class="btn btn-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">
+        <button class="Botonhamb " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
               </svg></button>
@@ -27,48 +27,56 @@
                     <div class="perfil">A</div>
                 </div>
         
-        
-        
-                    <form class="panel ">
-                    
-                    <input type="text"  value="Jose Andres Morales Reyes" [disabled]="editname" class="usuario">
-                    <input (click)="enablebutton()" type="button" value="Lapizito" class="usuario" id="btnusername">
-        
-                    <input type="text" value=" Monterrey, Nuevo Leon" [disabled]="editdob" class="usuario">
-                    
-                    <svg (click)="enablebutton1()" type="button" value="Lapizito"  xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="usuario" id="btnusername" viewBox="0 0 16 16">
-                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-                      </svg>
-        
-                    <input type="text" value="15/03/2001" disabled class="usuario" >
-        
-        
-                </form>  
+                
+               <form [formGroup]="contactForm" (ngSubmit)="onSaveForm()"> 
+                <form class="FirtsLast"  >
+                  <table class="example-full-width" cellspacing="0"><tr>
+                    <td><mat-form-field class="example-full-width" appearance="fill" style="border: cadetblue;">
+                      <mat-label>First name</mat-label>
+                      <input formControlName="firstname" matInput [disabled]="fnameandlas" value="Jose Andres"  >
+                    </mat-form-field></td>
+                    <td><mat-form-field class="example-full-width" appearance="fill">
+                      <mat-label> Last Name </mat-label>
+                      <input matInput [disabled]="fnameandlas" value="Morales Reyes" >
+                    </mat-form-field></td>
+                  </tr>
+              <td>
+             
+              </td>
+              </table>
+                </form >
+              
+                <form class="lugarsede"  >
+                  <mat-form-field appearance="fill" class="lugarTrab"  >
+                    <mat-label>Sedes</mat-label>
+                    <select matNativeControl [disabled]="fnameandlas">
+                      <option value="primary">Monterrey</option>
+                      <option value="accent">Chihuahua</option>
+                      <option value="warn">Durango</option>
+                      <option value="warn">Durango</option>
+                    </select>
+                  </mat-form-field>
+              </form>
+            
+         
+                <form class="dma">
+                <mat-form-field appearance="fill">
+               <input matInput type="date" disabled>
+              </mat-form-field><tr></tr>
+                </form>
+              <form class="EditPos">
+              <input  (click)="buttonD()" type="button" value="Editar" class="Editar">
+              </form>
+            </form>
+                  
                
           </div>
         </div>
-        <form class="row g-3 needs-validation" novalidate>
-            <div class="col-md-4">
-              <label for="validationCustom01" class="form-label">First name</label>
-              <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-              <div class="valid-feedback">
-                Looks good!
-              </div>
-            </div>
-        <div class="col-12">
-            <button class="btn btn-primary" type="submit">Submit form</button>
-          </div>  
-        </form>
-    <!--
-    <nav class="nave">
-        
-
-
-    </nav>
+       
+  
 
     
-    -->
+ 
  
 
      
