--- a/desayunos-arkus/src/app/components/newcomp/newcomp.component.scss
+++ b/desayunos-arkus/src/app/components/newcomp/newcomp.component.scss
@@ -1,100 +1,41 @@
-h1 {
-    font-size: 50px;
-    color: white;
-  }
+.FirtsLast{
+  display: flex;
+  justify-content: center;
+ 
+}
+.lugarsede{
+  display: flex;
+  justify-content: center;
+ 
+}
+.lugarTrab{
+ width: 35%;
+}
+.dma{
+  display: flex;
+  justify-content: center;
+}
+.EditPos{
+  display: flex;
+  justify-content: center;
   
-  p {
-    color: white;
-  }
-  
-  .content-wrapper {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background: linear-gradient(135deg, #ff5f6d 0%, #ffc371 100%);
-  }
-  
-  .hamburger {
-    position: absolute;
-    left: 20px;
-    top: 20px;
-    cursor: pointer;
-  }
-  .hamburger i {
-    font-size: 25px;
-    color: white;
-  }
-  
-  .nav-offcanvas {
-    width: 300px;
-    background: linear-gradient(135deg, #fbda61 0%, #f76b1c 100%);
-    height: 100vh;
-    position: fixed;
-    overflow-x: auto;
-    z-index: 2000;
-    padding: 50px 0;
-    top: 0;
-    left: -300px;
-    transition: 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  }
-  .nav-offcanvas .close {
-    position: absolute;
-    right: 10px;
-    top: 20px;
-    outline: 0;
-    opacity: 1;
-    background: transparent;
-    border: none;
-    box-shadow: none;
-    cursor: pointer;
-    transition: 0.3s ease;
-  }
-  .nav-offcanvas .close i {
-    font-size: 15px;
-    color: white;
-    text-shadow: none;
-  }
-  .nav-offcanvas .close:hover {
-    transform: rotate(90deg);
-  }
-  .nav-offcanvas-menu ul {
-    margin-bottom: 0;
-    padding-left: 0;
-    list-style: none;
-  }
-  .nav-offcanvas-menu ul li a {
-    color: white;
-    font-size: 16px;
-    font-weight: 300;
-    padding: 10px 40px;
-    display: block;
-    text-decoration: none;
-    position: relative;
-    z-index: 1;
-    transition: 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.05s;
-  }
-  .nav-offcanvas-menu ul li a:hover {
-    transform: translateX(10px);
-  }
-  .nav-offcanvas.open {
-    left: 0;
-  }
-  
-  .offcanvas-overlay {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.2);
-    z-index: 1999;
-    transition: 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-    visibility: hidden;
-    opacity: 0;
-  }
-  .offcanvas-overlay.on {
-    opacity: 1;
-    visibility: visible;
-  }
+}
+.Editar{
+  position: relative;
+  left: 15%;
+  background: none;
+  font-size: 15px;
+  height: 35px;
+  width: 100px;
+ border-radius: 2px 2px 0px 0px;
+  color: rgb(3, 3, 182);
+  font-weight: normal;
+  border: 1px solid rgb(187, 186, 186);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.945);
+  transition: 0.20s;
+}
+.Editar:hover{
+  background-color: rgba(0, 0, 255, 0.075);
+  border-bottom: 1.5px solid rgba(3, 3, 128, 0.945);
+ 
+}
