--- a/desayunos-arkus/src/app/components/perfil/perfil.component.scss
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.scss
@@ -4,22 +4,21 @@ body{
     position: relative;
   }
 /*El Apartado De en Nav De Arriba*/
-.nave{
-    top: 10;
-    width: 100%;
-  height: 100px;
-  background-color: rgb(207, 66, 66);
-  position: relative;
-  transition-duration: 0.5s;
-  transition-timing-function: swing;
-  overflow: hidden;
-}
+
+
+
+
 /*El Apartado De La  Letra Del Ususario y su vista*/
 .perfilpos{
   
   display: flex;
   justify-content: center;
 
+}
+.Botonhamb{
+  margin-top: 15px;
+  margin-right: 5px;
+  border: none;
 }
 .perfil{
   
@@ -37,75 +36,52 @@ body{
 }
 
 
-.usuario{
-  position: relative;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  width: 25%;
-  top: 10%;
-  
-  
-}
 
-/* input{
-  border: none;
-} */
-
-input:disabled{
-  background-color: rgb(255, 255, 255);
-  border-color: red;
-  border-width: 3px;
-  
-}
-
-@media (max-width: 1524px) {
-  .usuario{
-    /* height: 50%; */
-    width: 25%;
-    top: 30px;
-    
-    font-size: 150%; 
-  }
-}
-
-@media (max-width: 1324px) {
-  .usuario{
-    /* height: 50%; */
-    width: 25%;
-    top: 30px;
-    
-    font-size: 140%; 
-  }
-}
-
-@media (max-width: 750px) {
-  .usuario{
-    /* height: 50%; */
-    width: 25%;
-    top: 30px;
-   
-    font-size: 100%; 
-  }
-}
-
-.panel {
-  margin-top: 10px;
-
-display: flex;
-align-items: center;
-flex-direction: column; 
-}
-
-.hamburger {
-  position: absolute;
-  left: 20px;
-  top: 20px;
-  cursor: pointer;
-}
 .offcanvas-end {
 
 width: 500px;
 
 }
 
+.FirtsLast{
+  display: flex;
+  justify-content: center;
+ 
+}
+.lugarsede{
+  display: flex;
+  justify-content: center;
+ 
+}
+.lugarTrab{
+  
+ width: 50%;
+}
+.dma{
+  display: flex;
+  justify-content: center;
+}
+.EditPos{
+  display: flex;
+  justify-content: center;
+  
+}
+.Editar{
+  position: relative;
+  left: 15%;
+  background: none;
+  font-size: 15px;
+  height: 35px;
+  width: 100px;
+ border-radius: 2px 2px 0px 0px;
+  color: rgb(0, 0, 0);
+  font-weight: normal;
+  border: 1px solid rgb(187, 186, 186);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.945);
+  transition: 0.30s;
+}
+.Editar:hover{
+  background-color: rgba(0, 0, 255, 0.075);
+  border-bottom: 2.60px solid rgb(10, 10, 180);
+ color: rgb(4, 0, 255);
+}
