--- a/desayunos-arkus/src/app/app.component.scss
+++ b/desayunos-arkus/src/app/app.component.scss
@@ -8,7 +8,7 @@
 .hero{
     width: 100%;
     height: 100%;
-    background: linear-gradient(45deg,#6ac1c5,#bda5ff);
+    background: linear-gradient(45deg,#ff5e62,#ffd3be,#ff5e62);
 }
 #calendar{
     width: 90%;
