Se agrego carpeta assets, y boton en index

--- a/desayunos-arkus/src/app/app.component.html
+++ b/desayunos-arkus/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="hero">
     <div id="calendar"></div>
+    <button id="borrarEvento" type="submit">soy el boton que borra</button>
 </div>
