--- a/desayunos-arkus/src/styles.scss
+++ b/desayunos-arkus/src/styles.scss
@@ -1,6 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import './app/evo-calendar.min.css';
-@import './app/evo-calendar.orange-coral.min.css';
+@import './assets/evo-calendar.css';
 * {
     margin: 0px;
     padding: 0px;
