--- a/desayunos-arkus/src/app/app.component.scss
+++ b/desayunos-arkus/src/app/app.component.scss
@@ -8,14 +8,18 @@
 .hero{
     width: 100%;
     height: 100%;
-    background: linear-gradient(45deg,#ff5e62,#ffd3be,#ff5e62);
+    background: linear-gradient(45deg,#8773c1,#fbfbfb);
 }
 #calendar{
-    width: 90%;
-    height: 90%;
+    width: 96%;
+    height: 96%;
     position: absolute;
     border-radius: .5%;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    z-index: 0;
+}
+#borrarEvento{
+    position: fixed;
 }
