--- a/desayunos-arkus/src/app/app.component.html
+++ b/desayunos-arkus/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="hero">
+<router-outlet></router-outlet>
+<!-- <div class="hero">
     <div id="calendar"></div>
     <button id="borrarEvento" type="submit">soy el boton que borra</button>
-</div>
+</div> -->
