--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -1,1 +1,31 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+  </head>
+  <body>
+    <div class="hero">
+      <div id="calendar"></div>
+      <button id="borrarEvento" type="submit">soy el boton que borra</button>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./assets/evo-calendar.js"></script>
+    <script>
+      // initialize your calendar, once the page's DOM is ready
+      $(document).ready(function ($) {
+        $("#calendar").evoCalendar({
+          firstDayOfWeek: 1,
+          language: "es",
+          calendarEvents: [
+            {
+              id: "bHay68s", // Event's ID (required)
+              name: "Ivan Garcia", // Event name (required)
+              date: "October/26/2021", // Event date (required)
+              type: "holiday", // Event type 'birthday, event, holiday' (required)
+            },
+          ],
+        });
+      });
+    </script>
+  </body>
+</html>
