Crear servicio y ajustar componente
Creamos el servicio 'carga-scripts' y se modificó la ruta para invocar el js desde /assets

--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
       <button id="borrarEvento" type="submit">soy el boton que borra</button>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="./assets/evo-calendar.js"></script>
+    <script src="../../../assets/evo-calendar.js"></script>
     <script>
       // initialize your calendar, once the page's DOM is ready
       $(document).ready(function ($) {
