Calendario y Funciones base

--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -1,1 +1,3 @@
-<p-fullCalendar [events]="events" [options]="options" ></p-fullCalendar>
+<div class="calendar">
+    <p-fullCalendar [events]="events" [options]="options" ></p-fullCalendar>
+</div>
