--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -1,84 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
-    
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <button class="Botonhamb " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-              </svg></button>
-        
-        </div>
-        
-        <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="100" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Bienvendido</h5>
-            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body">
-                <div class="perfilpos">
-                    <div class="perfil">A</div>
-                </div>
-        
-                
-               <form [formGroup]="contactForm" (ngSubmit)="onSaveForm()"> 
-                <form class="FirtsLast"  >
-                  <table class="example-full-width" cellspacing="0"><tr>
-                    <td><mat-form-field class="example-full-width" appearance="fill" style="border: cadetblue;">
-                      <mat-label>First name</mat-label>
-                      <input formControlName="firstname" matInput [disabled]="fnameandlas" value="Jose Andres"  >
-                    </mat-form-field></td>
-                    <td><mat-form-field class="example-full-width" appearance="fill">
-                      <mat-label> Last Name </mat-label>
-                      <input matInput [disabled]="fnameandlas" value="Morales Reyes" >
-                    </mat-form-field></td>
-                  </tr>
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <button class="Botonhamb " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
+      aria-controls="offcanvasScrolling">
+      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list"
+        viewBox="0 0 16 16">
+        <path fill-rule="evenodd"
+          d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+      </svg></button>
+
+  </div>
+
+  <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="100"
+    id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Bienvendido</h5>
+      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div class="perfilpos">
+        <div class="perfil">A</div>
+      </div>
+
+
+      <form >
+        <div class="FirtsLast">
+          <table class="example-full-width" cellspacing="0">
+            <tr>
               <td>
-             
+                <mat-form-field class="example-full-width" appearance="fill" >
+                  <mat-label>First name</mat-label>
+                  <input  matInput [disabled]="fnameandlas" [value]="valueU">
+                </mat-form-field>
               </td>
-              </table>
-                </form >
-              
-                <form class="lugarsede"  >
-                  <mat-form-field appearance="fill" class="lugarTrab"  >
-                    <mat-label>Sedes</mat-label>
-                    <select matNativeControl [disabled]="fnameandlas">
-                      <option value="primary">Monterrey</option>
-                      <option value="accent">Chihuahua</option>
-                      <option value="warn">Durango</option>
-                      <option value="warn">Durango</option>
-                    </select>
-                  </mat-form-field>
-              </form>
-            
-         
-                <form class="dma">
-                <mat-form-field appearance="fill">
-               <input matInput type="date" disabled>
-              </mat-form-field><tr></tr>
-                </form>
-              <form class="EditPos">
-              <input  (click)="buttonD()" type="button" value="Editar" class="Editar">
-              </form>
-            </form>
-                  
-               
-          </div>
+              <td>
+                <mat-form-field class="example-full-width" appearance="fill">
+                  <mat-label> Last Name </mat-label>
+                  <input matInput [disabled]="fnameandlas" value="Morales Reyes">
+                </mat-form-field>
+              </td>
+            </tr>
+          </table>
         </div>
-       
+        <button (click)="showname()">asdfghj</button>
+
+        <div class="lugarsede">
+          <mat-form-field appearance="fill" class="lugarTrab">
+            <mat-label>Sedes</mat-label>
+            <select matNativeControl [disabled]="fnameandlas">
+              <option value="primary">Monterrey</option>
+              <option value="accent">Chihuahua</option>
+              <option value="warn">Durango</option>
+              <option value="warn">Durango</option>
+            </select>
+          </mat-form-field>
+        </div>    
+
+        <div class="dma">
+          <mat-form-field appearance="fill">
+            <input matInput type="date" disabled>
+          </mat-form-field>
+          <tr></tr>
+        </div>
+
+        <div class="EditPos">
+          <input (click)="buttonD()" type="submit" value="Editar" class="Editar">
+          <input  type="submit" value="Actualizar" class="Editar">
+        </div>
+      </form>
+
+
+    </div>
+  </div>
+
   
-
-    
- 
- 
-
-     
 </body>
+
 </html>
