--- a/desayunos-arkus/src/app/components/newcomp/newcomp.component.html
+++ b/desayunos-arkus/src/app/components/newcomp/newcomp.component.html
@@ -1,2 +1,50 @@
-  
-            
+<form class="example-form"  novalidate>
+
+<span [formGroup]="ValiMessa">
+<mat-form-field appearance="outline"> 
+    <mat-label>First Name</mat-label>
+      <input matInput type="text" placeholder="First Name" formControlName="firstName" required >
+    </mat-form-field>  
+      <div class="" *ngIf="ValiMessa.invalid && (ValiMessa.dirty || ValiMessa.touched)">
+        <mat-error *ngIf="ValiMessa.controls['firstName'].hasError('required')">
+            First Name is Required!
+          </mat-error>
+          <mat-error *ngIf="ValiMessa.controls['firstName'].hasError('minlength')">
+            First Name should be atleast 4 characters long!
+          </mat-error> 
+          <mat-error *ngIf="ValiMessa.controls['firstName'].hasError('maxlength')">
+            First Name should be atleast 20 characters long!
+          </mat-error> 
+         
+      </div>
+    </span><br>
+      <br>
+      
+  <span [formGroup]="ValiMessa2">
+      <mat-form-field appearance="outline"> 
+        <mat-label>Last Name</mat-label>
+        <input matInput type="text" placeholder="Last Name" formControlName="lastname" required  >
+      </mat-form-field>  
+     
+        <div class="" *ngIf="ValiMessa2.invalid && (ValiMessa2.dirty || ValiMessa2.touched)">
+          <mat-error *ngIf="ValiMessa2.controls['lastname'].hasError('required')">
+              First Name is Required!
+            </mat-error>
+            <mat-error *ngIf="ValiMessa2.controls['lastname'].hasError('minlength')">
+              First Name should be atleast 4 characters long!
+            </mat-error> 
+            <mat-error *ngIf="ValiMessa2.controls['lastname'].hasError('maxlength')">
+              First Name should be atleast 20 characters long!
+            </mat-error> 
+           
+        </div>
+    </span>
+    <button mat-raised-button type="submit" [disabled]="!ValiMessa.valid" [disabled]="ValiMessa2.valid">
+        submit
+        </button>
+
+    
+       
+</form>
+<br>
+
