--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -32,26 +32,56 @@
       </div>
 
 
-      <form >
-        <div class="FirtsLast">
-          <table class="example-full-width" cellspacing="0">
-            <tr>
-              <td>
-                <mat-form-field class="example-full-width" appearance="fill" >
-                  <mat-label>First name</mat-label>
-                  <input  matInput [disabled]="fnameandlas" [value]="valueU">
-                </mat-form-field>
-              </td>
-              <td>
-                <mat-form-field class="example-full-width" appearance="fill">
-                  <mat-label> Last Name </mat-label>
-                  <input matInput [disabled]="fnameandlas" value="Morales Reyes">
-                </mat-form-field>
-              </td>
-            </tr>
-          </table>
+<form [formGroup]="perfilForm" (ngSubmit)="onSubmit()"  novalidate>
+
+  <div [formGroup]="ValiMessa" style="background: royalblue;" >
+  <mat-form-field appearance="outline"  > 
+      <mat-label>First Name</mat-label>
+        <input matInput   formControlName="firstName" required >
+        <mat-error  *ngIf="ValiMessa.controls['firstName'].hasError('required')">
+          First Name is Required!
+        </mat-error>
+      </mat-form-field>  
+        <div class="alert-danger" *ngIf="ValiMessa.invalid && (ValiMessa.dirty || ValiMessa.touched)">
+          
+            <mat-error *ngIf="ValiMessa.controls['firstName'].hasError('minlength')">
+              First Name should be atleast 4 characters long!
+            </mat-error> 
+            <mat-error *ngIf="ValiMessa.controls['firstName'].hasError('maxlength')">
+              First Name should be atleast 20 characters long!
+            </mat-error> 
+           
         </div>
-        <button (click)="showname()">asdfghj</button>
+  
+    
+        <mat-form-field appearance="outline" style="left: 100%; position: relative;" > 
+          <mat-label>Last Name</mat-label>
+          <input matInput  type="text" placeholder="Last Name" formControlName="lastname" required  >
+          <mat-error *ngIf="ValiMessa.controls['lastname'].hasError('required')" >
+            First Name is Required!
+          </mat-error>
+          
+        </mat-form-field>  
+        
+          <div class="" *ngIf="ValiMessa.invalid && (ValiMessa.dirty || ValiMessa.touched)">
+            
+              <mat-error *ngIf="ValiMessa.controls['lastname'].hasError('minlength')">
+                First Name should be atleast 4 characters long!
+              </mat-error> 
+              <mat-error *ngIf="ValiMessa.controls['lastname'].hasError('maxlength')">
+                First Name should be atleast 20 characters long!
+              </mat-error> 
+          </div>
+         
+      </div>
+      <button mat-raised-button type="submit" [disabled]="!ValiMessa.valid" >
+          submit
+          </button>
+  
+      
+         
+ 
+  <br><br><br>
 
         <div class="lugarsede">
           <mat-form-field appearance="fill" class="lugarTrab">
@@ -74,7 +104,7 @@
 
         <div class="EditPos">
           <input (click)="buttonD()" type="submit" value="Editar" class="Editar">
-          <input  type="submit" value="Actualizar" class="Editar">
+          
         </div>
       </form>
 
