--- a/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
+++ b/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <link rel='stylesheet' href='https://cdn.jsdelivr.net/sweetalert2/5.3.5/sweetalert2.css'>
-  <link rel="stylesheet" href="./login-registro.component.scss">
-  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'>
-</head> 
-<body>  
 <!-- Registro y login -->
 <div class="container">
 
@@ -39,51 +30,48 @@
   
       <!-- Registro -->
       <div class="contenido_tab">
-        <form>
+        <!-- <form> -->
           <div class="form-group">
             <label for="InputName">Nombre</label>
-            <input type="text" class="form-control" id="nombre" placeholder="Nombre" required>
+            <input type="text" id="nombre" placeholder="Nombre" [(ngModel)]="ufname" >
           </div>
           <div class="form-group">
             <label for="InputUsername">Apellido</label>
-            <input type="text" class="form-control" id="apellido" placeholder="Apellido" required>
+            <input type="text" id="apellido" placeholder="Apellido" [(ngModel)]="ulname" >
           </div>
       
-          <div class="form-group">
+          <div>
             <label for="InputFecha">Fecha de Nacimiento</label><br>
-            <input type="text" id="dia" placeholder="DD" required/>
+            <input type="number" id="dia" placeholder="DD" [(ngModel)]="uday" required/>
                
-            <input type="text" id="mes" placeholder="MM" required/>
+            <input type="number" id="mes" placeholder="MM" [(ngModel)]="umonth" required/>
         
-            <input type="text" id="año" placeholder="AAAA" required/>
+            <input type="number" id="año" placeholder="AAAA" [(ngModel)]="uyear" required/>
           </div>
 
           <div class="form-group">
             <label for="sel1">Sede</label>
-            <select class="form-control" id="sede">
-              <option>Selecciona tu Ubicación</option>
-              <option>Monterrey</option>
+            <select class="form-control" id="sede" [(ngModel)]="ulocation">
+              <option value="default">Selecciona tu Ubicación</option>
+              <option value="Monterrey">Monterrey</option>
             </select>
                     
           </div>
       
           <div class="form-group">
             <label for="exampleFormControlInput2">Correo</label>
-            <input type="email" class="form-control" id="correo2" placeholder="arkus@example.com" required>
+            <input type="email" class="form-control" id="correo2" placeholder="arkus@example.com" [(ngModel)]="uemail" required>
           </div>
           <div class="form-group">
             <label for="exampleInputPassword2">Contraseña</label>
-            <input type="password"  class="form-control" id="contraseña2" placeholder="Contraseña" required>
+            <input type="password"  class="form-control" id="contraseña2" placeholder="Contraseña" [(ngModel)]="upass" required>
           </div>
           <div class="form-group">
             <label for="exampleInputPasswordVer">Confirmar Contraseña</label>
-            <input type="password" class="form-control" id="contraseñaVer" placeholder="Contraseña" required>
+            <input type="password" class="form-control" id="contraseñaVer" placeholder="Contraseña" [(ngModel)]="upassconf" required>
           </div>
-          <button type="submit" class="btn btn-primary">Registrar</button>
-        </form>
+          <button (click)="onClickRegister()" type="button" class="btn btn-primary">Registrar</button>
+        <!-- </form> -->
       </div>
   </div>
 </div>
-
-</body>
-</html>
