--- a/desayunos-arkus/src/app/components/perfil/perfil.component.scss
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.scss
@@ -1,88 +1,46 @@
-body{
-    background-color: darken(white, 6%);
-    font-family: 'Roboto', sans-serif;
-    position: relative;
-  }
+body {
+  background-color: darken(white, 6%);
+  font-family: "Roboto", sans-serif;
+  position: relative;
+}
 /*El Apartado De en Nav De Arriba*/
 
+// .cajon2 {
+//   display: flex;
+//   flex-direction: row;
+// }
 
-
+// .caja {
+//   display: block;
+// }
 
 /*El Apartado De La  Letra Del Ususario y su vista*/
-.perfilpos{
-  
+.perfilpos {
   display: flex;
   justify-content: center;
-
 }
-.Botonhamb{
+.Botonhamb {
   margin-top: 15px;
   margin-right: 5px;
   border: none;
 }
-.perfil{
-  
+.perfil {
   width: 10rem;
-	height: 10rem;
+  height: 10rem;
   margin-top: 1%;
-	border-radius: 50%;
-	background: red;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-  font-size: 600%;
-  
-}
-
-.formulario{
-  display: flex;
-  
-  justify-content: space-evenly;
-}
-
-.offcanvas-end {
-
-width: 50%;
-
-}
-
-
- 
-
-.lugarTrab{
-  
- width: 50%;
-}
-.dma{
+  border-radius: 50%;
+  background: red;
   display: flex;
   justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 600%;
 }
-.alert-danger{
-  margin-bottom: 5px;
-font-size: 10px;
-  width: 20%;
-  display: flex;
- flex-direction: column-reverse;
+.offcanvas-end {
+  width: 50%;
 }
-  
 
-.Editar{
-  position: relative;
-  left: 15%;
-  background: none;
-  font-size: 15px;
-  height: 35px;
-  width: 100px;
- border-radius: 2px 2px 0px 0px;
-  color: rgb(0, 0, 0);
-  font-weight: normal;
-  border: 1px solid rgb(187, 186, 186);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.945);
-  transition: 0.30s;
-}
-.Editar:hover{
-  background-color: rgba(0, 0, 255, 0.075);
-  border-bottom: 2.60px solid rgb(10, 10, 180);
- color: rgb(4, 0, 255);
+.Firstlast{
+  display: flex;
+  flex-direction: row;
 }
