--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
 <div class="calendar">
-    <p-fullCalendar [events]="events" [options]="options" ></p-fullCalendar>
+    <full-calendar [options]="options"></full-calendar>
 </div>
