--- a/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
+++ b/desayunos-arkus/src/app/components/login-registro/login-registro.component.html
@@ -1,3 +1,4 @@
+
 <!-- Registro y login -->
 <div class="container">
 
@@ -41,12 +42,13 @@
           </div>
       
           <div>
-            <label for="InputFecha">Fecha de Nacimiento</label><br>
-            <input type="number" id="dia" placeholder="DD" [(ngModel)]="uday" required/>
-               
-            <input type="number" id="mes" placeholder="MM" [(ngModel)]="umonth" required/>
-        
-            <input type="number" id="año" placeholder="AAAA" [(ngModel)]="uyear" required/>
+            <mat-form-field appearance="fill">
+              <mat-label>Choose a date</mat-label>
+              <input matInput [matDatepicker]="picker" [(ngModel)]="udob">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker startView="year"></mat-datepicker>
+            </mat-form-field>
+            
           </div>
 
           <div class="form-group">
