agregacion de registro y login
se agrego otras carpetas

--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -36,11 +36,11 @@
         <div class="Firstlast">
           <mat-form-field appearance="outline">
           <mat-label for="fname">First name:</mat-label>
-          <input matInput type="text" id="fname" name="fname" formControlName="firstName" [(ngModel)]="fname"><br>
+          <input matInput type="text" id="fname" name="fname" formControlName="firstName" ><br>
           </mat-form-field>
           <mat-form-field appearance="outline">
           <mat-label for="lname">Last name:</mat-label>
-          <input matInput type="text" id="lname" name="lname" formControlName="lastName" [(ngModel)]="lname"><br>
+          <input matInput type="text" id="lname" name="lname" formControlName="lastName"><br>
           <mat-error>
             First Name is Required!
           </mat-error>
