--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -1,32 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-
-<body>
-  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-    <button class="Botonhamb " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
-      aria-controls="offcanvasScrolling">
-      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list"
-        viewBox="0 0 16 16">
-        <path fill-rule="evenodd"
-          d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
-      </svg></button>
-
-  </div>
-
-  <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="100"
-    id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
-    <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Bienvendido</h5>
-      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-    <div class="offcanvas-body">
+    <!--
       <div class="perfilpos">
         <div class="perfil">A</div>
       </div>
@@ -46,33 +19,86 @@
           </mat-error>
         </mat-form-field>
         </div>
-        <div class="Firstlast">
+        <div class="Firstlast2">
         <mat-form-field appearance="outline">
         <mat-label for="">Sedes:</mat-label>
         <select matNativeControl name="curso" formControlName="sedes">
-
           <option value="" disabled>Elige una opción</option>
-
           <option>Monterrey</option>
           <option>Chihuahua</option>
           <option>Durango</option>
           <option>Durango</option>
-
         </select>
       </mat-form-field>
-   
-        <input type="date" disabled><br>
+      <mat-form-field appearance="fill">
+        <mat-label>Choose a date</mat-label>
+        <input matInput [matDatepicker]="picker">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
       </div>
+
+
         <button type="submit" [disabled]="!perfilForm.valid">submit</button>
 
-      </form>
+      </form>-->
 
+      <mat-drawer-container class="example-container" autosize>
+        <mat-drawer #drawer class="example-sidenav" mode="side" position="end" >
+          <div class="perfilpos">
+            <div class="perfil">A</div>
+          </div>
+    
+          <form action="" [formGroup]="perfilForm" (ngSubmit)="onSubmit()">
+    
+            <div class="Firstlast">
+              <mat-form-field appearance="outline">
+              <mat-label for="fname">First name:</mat-label>
+              <input matInput type="text" id="fname" name="fname" formControlName="firstName" [(ngModel)]= "fname"><br>
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+              <mat-label for="lname">Last name:</mat-label>
+              <input matInput type="text" id="lname" name="lname" formControlName="lastName" [(ngModel)]= "fname"><br>
+              <mat-error>
+               <!-- {{mensajerror}}-->
+                First Name is Required!
+              </mat-error>
+            </mat-form-field>
+            </div>
+            <div class="Firstlast2">
+            <mat-form-field appearance="outline">
+            <mat-label for="">Sedes:</mat-label>
+            <select matNativeControl name="curso" formControlName="sedes">
+              <option value="" disabled>Elige una opción</option>
+              <option>Monterrey</option>
+              <option>Chihuahua</option>
+              <option>Durango</option>
+              <option>Durango</option>
+            </select>
+          </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Choose a date</mat-label>
+            <input matInput [matDatepicker]="picker">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+          </div>
+    
+    
+            <button type="submit" [disabled]="!perfilForm.valid">submit</button>
+    
+          </form>
+        </mat-drawer>
+      
+        <div class="example-sidenav-content">
+          <button type="button" mat-button (click)="drawer.toggle()">
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+            width="50" height="50"
+            viewBox="0 0 50 50"
+            style=" fill:#000000;"><path d="M 0 9 L 0 11 L 50 11 L 50 9 Z M 0 24 L 0 26 L 50 26 L 50 24 Z M 0 39 L 0 41 L 50 41 L 50 39 Z"></path></svg>
+          </button>
+        </div>
+      
+      </mat-drawer-container>
 
-
-    </div>
-  </div>
-
-
-</body>
-
-</html>
+ 
