--- a/desayunos-arkus/src/app/components/perfil/perfil.component.scss
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.scss
@@ -1,8 +1,4 @@
-body {
-  background-color: darken(white, 6%);
-  font-family: "Roboto", sans-serif;
-  position: relative;
-}
+
 /*El Apartado De en Nav De Arriba*/
 
 // .cajon2 {
@@ -15,19 +11,12 @@ body {
 // }
 
 /*El Apartado De La  Letra Del Ususario y su vista*/
-.perfilpos {
-  display: flex;
-  justify-content: center;
-}
-.Botonhamb {
-  margin-top: 15px;
-  margin-right: 5px;
-  border: none;
-}
+
+
 .perfil {
   width: 10rem;
   height: 10rem;
-  margin-top: 1%;
+  
   border-radius: 50%;
   background: red;
   display: flex;
@@ -36,12 +25,25 @@ body {
   text-align: center;
   font-size: 600%;
 }
-.offcanvas-end {
-  width: 50%;
+
+.example-container {
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  
+  
 }
 
-.Firstlast{
+.example-sidenav-content {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  
 }
+
+.example-sidenav {
+  padding: 20px;
+  
+}
+
