WIP para integracion

--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -31,7 +31,7 @@
         <div class="perfil">A</div>
       </div>
 
-      <form action="" [formGroup]="perfilForm" (ngSubmit)="onSubmit()">
+      <!-- <form action="" [formGroup]="perfilForm" (ngSubmit)="onSubmit()"> -->
        <div class="Firstlast">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" formControlName="firstName"><br>
@@ -51,7 +51,7 @@
         </select><br><br>
         <input type="date" max="maxdate" ><br>
         <button type="submit"  [disabled]="!perfilForm.valid">submit</button>
-      </form>
+      <!-- </form> -->
 
      
 
