--- a/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
+++ b/desayunos-arkus/src/app/components/home/DialogMenu/dialog-menu.component.html
@@ -1,24 +1,9 @@
-<h1 mat-dialog-title>Menu</h1>
+<h1 mat-dialog-title>Menu {{data.dateStr}}</h1> 
+<button mat-stroked-button color="primary" (click)="handleSaveButton()">Register</button>
 <div class="containerDialog">
-    <div class="col-6 columnDishes">
-    <mat-selection-list #dish (selectionChange)="getSelectedDish(dish.selectedOptions.selected)">
-        <mat-list-option *ngFor="let dish of dishesList" value="{{dish.id_dish}}">
-          {{dish.name_dish}}
-        </mat-list-option>
-      </mat-selection-list>
-      <button mat-stroked-button color="primary" (click)="handleSaveButton()">Save</button>
-    </div>
-    <mat-divider [vertical]="true"></mat-divider>
-    <div class="col-6 columnUsers">
-        <mat-expansion-panel *ngFor="let user of UserListPerDay" (opened)="panelOpenState = true"
-                           (closed)="panelOpenState = false">
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            {{user.first_name + " " + user.last_name}}
-            <div class="deleteIcon"><i class="fa fa-times" aria-hidden="true" (click)="handleDeleteUser(user.id_user)"> </i></div>
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <p>{{user.name_dish}}</p>
-      </mat-expansion-panel>
-    </div>
+  <div class="col-12 columnUsers">
+    <mat-card *ngFor="let user of UserListPerDay">
+      {{user.first_name + " " + user.last_name}}
+    </mat-card>
+  </div>
 </div>
