--- a/desayunos-arkus/src/app/components/perfil/perfil.component.scss
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.scss
@@ -11,7 +11,10 @@
 // }
 
 /*El Apartado De La  Letra Del Ususario y su vista*/
-
+.perfilpos{
+  display: flex;
+  justify-content: center;
+}
 
 .perfil {
   width: 10rem;
@@ -26,6 +29,16 @@
   font-size: 600%;
 }
 
+.Firstlast{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+ justify-content: space-around;
+  width: 100%;
+ 
+  margin-top: 15px;
+}
+
 .example-container {
   width: 100%;
   height: 100%;
@@ -37,13 +50,19 @@
 .example-sidenav-content {
   display: flex;
   height: 100%;
-  align-items: center;
-  justify-content: center;
+  align-items:flex-start;
+  justify-content:flex-end;
+  
+  
+}
+.menuH{
+  top: 15px;
+  right: 20px;
   
 }
 
 .example-sidenav {
-  padding: 20px;
+  padding: 5%;
   
 }
 
