terminando dos tareas
tarea NET-107 y NET-108 casi terminado

--- a/desayunos-arkus/src/app/components/perfil/perfil.component.html
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.html
@@ -57,7 +57,7 @@
               </mat-form-field>
               <mat-form-field appearance="outline">
               <mat-label for="lname">Last name:</mat-label>
-              <input matInput type="text" id="lname" name="lname" formControlName="lastName" [(ngModel)]= "lname"><br>
+              <input matInput type="text" id="lname" name="lname" formControlName="lastName" [(ngModel)]= "lname"  ><br>
               <mat-error>
                <!-- {{mensajerror}}-->
                 First Name is Required!
@@ -66,7 +66,7 @@
            
             <mat-form-field appearance="outline">
               <mat-label>Enter your password</mat-label>
-              <input matInput [type]="hide ? 'password' : 'text'">
+              <input id="passw" name="passw"  [(ngModel)]= "passw" matInput [type]="hide ? 'password' : 'text'" formControlName="passw" >
               <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
               </button>
@@ -74,7 +74,7 @@
 
             <mat-form-field appearance="outline">
             <mat-label for="">Sedes:</mat-label>
-            <select matNativeControl name="curso" formControlName="sedes">
+            <select matNativeControl name="curso" formControlName="sedes" >
               <option value="" disabled>Elige una opción</option>
               <option>Monterrey</option>
               <option>Chihuahua</option>
@@ -83,26 +83,27 @@
             </select>
           </mat-form-field>
           <mat-form-field appearance="outline">
-            <mat-label>Input disabled</mat-label>
-            <input matInput [matDatepicker]="dp3" disabled>
+            <mat-label>birthday date</mat-label>
+            <input matInput [matDatepicker]="dp3" id="dateP" name="dateP" formControlName="datePo" [(ngModel)]= "dateP" readonly>
             <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
-            <mat-datepicker #dp3 disabled="false"></mat-datepicker>
+            <mat-datepicker #dp3  ></mat-datepicker>
           </mat-form-field>
           </div>
     
-    
+            <div class="EnvEdi">
             <button mat-raised-button color="primary" type="submit" [disabled]="!perfilForm.valid">submit</button>
+            
+            <button mat-raised-button color="primary" type="submit" (click)="buttonD()">Edit</button>
+            </div>
     
           </form>
         </mat-drawer>
       
-        <div class="example-sidenav-content">
-          <button class="menuH" type="button" mat-button (click)="drawer.toggle()">
-            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-            width="40" height="40"
-            viewBox="0 0 50 50"
-            style=" fill:#120b80;"><path d="M 0 9 L 0 11 L 50 11 L 50 9 Z M 0 24 L 0 26 L 50 26 L 50 24 Z M 0 39 L 0 41 L 50 41 L 50 39 Z"></path></svg>
-          </button>
+        <div id="toggle" >
+          <input class="menuH" type="checkbox" name="" id="" (click)="drawer.toggle()">
+          <span></span>
+           
+          
         </div>
       
       </mat-drawer-container>
