--- a/desayunos-arkus/src/app/components/perfil/perfil.component.scss
+++ b/desayunos-arkus/src/app/components/perfil/perfil.component.scss
@@ -36,7 +36,7 @@
  justify-content: space-around;
   width: 100%;
  
-  margin-top: 15px;
+  margin-top: 20px;
 }
 
 .example-container {
@@ -62,7 +62,59 @@
 }
 
 .example-sidenav {
-  padding: 5%;
+  padding: 50px;
+  width: 20%;
   
 }
 
+.EnvEdi{
+display: flex;
+justify-content: space-between;
+}
+
+//todo esto es la animacion de el menu de burger
+#toggle {
+  position: relative;
+  width: 30px;
+  height: 26px;
+  top: 20px;
+  left: 97%;
+}
+#toggle input {
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  cursor: pointer;
+}
+#toggle input:checked + span {
+  background: transparent;
+}
+#toggle input:checked + span:after {
+  transform: rotate(45deg) translate(-1px, -8px);
+}
+#toggle input:checked + span:before {
+  transform: rotate(-45deg) translate(-4px, 12px);
+}
+#toggle span {
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  background: rgb(19, 12, 12);
+  margin-top: 10px;
+}
+#toggle span:before, #toggle span:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  background: rgb(22, 18, 18);
+  top: -9px;
+  transition: 0.3s;
+}
+#toggle span:after {
+  top: 9px;
+}
